# CassiaT

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  testing.py
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/: ~$GGGGGGGGGG.xlsx  ~$HOTELS LIST.xlsx
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/ACANTHUS - CENNET BARUT COLLECTION+/: room_types_by_selling.txt
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/ADAM - EVE ADULT ONLY 16 plus+/: room_types_by_selling.txt
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/ADAM - EVE ADULT ONLY 16 plus+/images/ROOMS/DESIGN ROOM/: 636542179542821989.jfif
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/AKDORA ELITE HOTEL - SPA+/: room_types_by_selling.txt
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/ALAIYE KLEOPATRA HOTEL+/: room_types_by_selling.txt
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/ALARCHA HOTELS RESORTS+/: Alarcha Hotels  Resorts Yaz Konsept-Tesis Bilgileri 2025 RU.docx  Alarcha Hotels  Resorts Yaz Konsept-Tesis Bilgileri 2025 TR.docx  room_types_by_selling.txt
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/ALBA RESORT HOTEL+/: room_types_by_selling.txt
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/ALEXIA RESORT - SPA ADULT ONLY +16+/: room_types_by_selling.txt
FILES/CASSIATOUR HOTELS 1/CASSIATOUR HOTELS/AMON HOTEL ADULT ONLY +16+/: room_types_by_selling.txt
agent/: __init__.py  beachsea.py  definition.py  pools.py  restaurants.py  rooms.py  script_tools.py  services.py  units.py
configs/: prompt_config.json
(+2 files in other folders)
